--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
             <version>${mapstruct.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.cronutils</groupId>
+            <artifactId>cron-utils</artifactId>
+            <version>7.0.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.primefaces.themes</groupId>
