add postgresql connection and parsed data view counter

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,7 @@ jsf:
   primefaces:
     theme: omega
     font-awesome: true
+    push-server-url:
 
 server:
   port: 9090
@@ -13,3 +14,16 @@ spring:
     user:
       name: user
       password: 123
+  datasource:
+    platform: postgresql
+    url: jdbc:postgresql://localhost:32769/postgres
+    username: postgres
+    password: postgres
+    driverClassName: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+      dialect: org.hibernate.dialect.PostgreSQL9Dialect
+      show_sql: true
+    properties.hibernate.temp.use_jdbc_metadata_defaults: false
+
