selectOne to field tyep form, select product type. edited crawler and added fetch page tester.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 jsf:
   primefaces:
-    theme: omega
+    theme: aristo
     font-awesome: true
     push-server-url:
 
@@ -20,6 +20,8 @@ spring:
     username: crawler
     password: crawler
     driverClassName: org.postgresql.Driver
+    hikari:
+      auto-commit: false
   jpa:
     hibernate:
       ddl-auto: create-drop
