--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
       name: user
       password: 123
   datasource:
-    platform: crawler
+    platform: postgres
     url: jdbc:postgresql://localhost:32769/crawler
     username: crawler
     password: crawler
@@ -24,7 +24,7 @@ spring:
       auto-commit: false
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
       dialect: org.hibernate.dialect.PostgreSQL9Dialect
       show_sql: true
     properties.hibernate.temp.use_jdbc_metadata_defaults: false
