--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,7 @@ crawler:
   max-total-connections: 10
   connection-timeout: 20000
   socket-timeout: 5000
+  viewOnly: false
 
 jsf:
   primefaces:
@@ -27,7 +28,7 @@ spring:
       password: 123
   datasource:
     platform: postgres
-    url: jdbc:postgresql://localhost:32771/crawler
+    url: jdbc:postgresql://localhost:5432/crawler
     username: crawler
     password: crawler
     driverClassName: org.postgresql.Driver
